RESOLVED FIXED136954
Leverage RenderLayerBacking::renderer() instead of m_owningLayer.renderer()
https://bugs.webkit.org/show_bug.cgi?id=136954
Summary Leverage RenderLayerBacking::renderer() instead of m_owningLayer.renderer()
Mihnea Ovidenie
Reported 2014-09-19 10:08:32 PDT
Leverage RenderLayerBacking::renderer() instead of m_owningLayer.renderer()
Attachments
Patch (3.49 KB, patch)
2014-09-19 10:10 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2014-09-19 10:10:57 PDT
WebKit Commit Bot
Comment 2 2014-09-22 00:52:02 PDT
Comment on attachment 238377 [details] Patch Clearing flags on attachment: 238377 Committed r173808: <http://trac.webkit.org/changeset/173808>
WebKit Commit Bot
Comment 3 2014-09-22 00:52:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.