Leverage RenderLayerBacking::renderer() instead of m_owningLayer.renderer() https://bugs.webkit.org/show_bug.cgi?id=136954

Reviewed by Darin Adler.

No new tests just refactoring.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateCompositedBounds):
(WebCore::RenderLayerBacking::updateDirectlyCompositedBackgroundImage):
(WebCore::RenderLayerBacking::paintIntoLayer):


Canonical link: https://commits.webkit.org/154804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173808 268f45cc-cd09-0410-ab3c-d52691b4dbfc